--- a/slides/shower/index.html
+++ b/slides/shower/index.html
@@ -1,210 +1,388 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Shower Presentation Engine</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
+  <head>
+    <title>LoopBack @ Node.js Leipzig Meetup</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="node_modules/@shower/ribbon/styles/styles.css"
+    />
     <style>
-        .shower {
-            --slide-ratio: calc(16 / 9);
-        }
+      .shower {
+        --slide-ratio: calc(16 / 9);
+      }
     </style>
-</head>
-<body class="shower list">
-
+  </head>
+  <body class="shower list">
     <header class="caption">
-        <h1>Shower Presentation Engine</h1>
-        <p>Yours Truly, Famous Inc.</p>
+      <h1>LoopBack @ Node.js Leipzig Meetup</h1>
+      <p>Björn Strobach - @bstrobach</p>
     </header>
 
     <section class="slide" id="cover">
-        <h2>Shower Presentation Engine</h2>
-        <p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-        <figure>
-            <img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
-        <style>
-            #cover h2 {
-                margin: 30px 0 0;
-                color: white;
-                text-align: center;
-                font-size: 70px;
-            }
+      <h2>LoopBack 4: Build amazing APIs</h2>
+      <p>A platform for building APIs and microservices in Node.js</p>
+      <p class="note">Björn Strobach - Node.js Meetup Leipzig - July 2019</p>
+      <style>
+        #cover h2 {
+          margin: 130px 0 0;
+          text-align: center;
+          font-size: 70px;
+        }
 
-            #cover p {
-                margin: 10px 0 0;
-                text-align: center;
-                color: white;
-                font-style: italic;
-                font-size: 20px;
-            }
+        #cover p {
+          margin: 10px 0 0;
+          text-align: center;
+          font-style: italic;
+          font-size: 30px;
+        }
+        #cover p.note {
+          margin-top: 4em;
+          font-size: 20px;
+        }
 
-            #cover p a {
-                color: white;
-            }
-        </style>
+        .footer {
+          color: black;
+        }
+        #cover::after {
+          visibility: hidden;
+        }
+      </style>
     </section>
 
-    <section class="slide">
-        <h2>Shower key features</h2>
-        <ol>
-            <li>Built on HTML, CSS and JavaScript</li>
-            <li>Works in all modern browsers</li>
-            <li>Themes are separated from engine</li>
-            <li>Fully keyboard accessible</li>
-            <li>Printable to PDF</li>
-        </ol>
-        <p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
-    </section>
 
-    <section class="slide">
-        <h2>Plain text on your slides</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
-    </section>
-
-    <section class="slide">
-        <h2>Two columns if you like</h2>
-        <div class="columns two">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+    <section class="slide" id="about-me">
+      <h2>Who is this guy?</h2>
+      <div class="columns two">
+        <div>
+          <img
+            height="200"
+            src="pictures/bjoern-strobach.png"
+            alt="Björn Strobach"
+          />
         </div>
+        <div>
+          Software Developer <a href="http://mrappware.de">@MrAppWare</a>,
+          Magdeburg GitHub: <a href="https://github.com/bstrobach">@bstrobach</a
+          ><br />
+          Twitter: <a href="https://twitter.com/bstrobach">@bstrobach</a><br />
+          Xing: <a href="http://xing.to/bmstr">http://xing.to/bstrobach</a>
+        </div>
+      </div>
+      <div>
+        Slides &amp; Code:
+        <a href="https://github.com/bstrobach/loopback-nodejs-leipzig"
+          >https://github.com/bstrobach/<strong
+            >loopback-nodejs-leipzig</strong
+          ></a
+        >
+      </div>
+      <style>
+        #about-me img {
+          border: 2px solid #222;
+          box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        }
+        #about-me .columns.two {
+          grid-template-columns: 200px 1fr;
+        }
+      </style>
     </section>
 
     <section class="slide">
-        <h2>All kind of lists</h2>
-        <ol>
-            <li>Simple lists are marked with bullets</li>
-            <li>Ordered lists begin with a number</li>
-            <li>You can even nest lists one inside another
-                <ul>
-                    <li>Or mix their types</li>
-                    <li>But do not go too far</li>
-                    <li>Otherwise audience will be bored</li>
-                </ul>
-            </li>
-            <li>Look, seven rows exactly!</li>
-        </ol>
+      <h2>What are we talking about?</h2>
+      <h3 class="next">LoopBack <span class="next">- What?</span></h3>
+      <figure class="next">
+        <blockquote>
+          <p>
+            LoopBack is a highly extensible, open-source Node.js framework based
+            on Express that enables you to quickly create APIs and microservices
+            composed from backend systems such as databases and SOAP or REST
+            services.
+          </p>
+        </blockquote>
+        <figcaption>LoopBack Docs</figcaption>
+      </figure>
+    </section>
+
+    <section class="slide" id="facts">
+      <h2>Cool, who did it?</h2>
+      <ul>
+        <li class="next">StrongLoop</li>
+        <li class="next">Based in California</li>
+        <li class="next">Highly active in Node.js Foundation</li>
+        <li class="next">Published LoopBack in September 2013</li>
+        <li class="next">
+          <del class="ibm-company"
+            >Acquired by IBM in September 2015
+            <span class="next"> - An IBM Company</span></del
+          >
+        </li>
+        <li class="next">Since then: LoopBack 3 and 4 released</li>
+      </ul>
+      <style>
+        #facts ul > li::before {
+          content: "";
+        }
+        #facts .ibm-company {
+          position: relative;
+          text-decoration: none;
+        }
+        #facts .ibm-company span {
+          position: absolute;
+          top: -8.385em;
+          left: 5.2em;
+          right: 0em;
+          height: 0.12em;
+          content: "";
+        }
+      </style>
+    </section>
+
+    <section class="slide" id="why">
+      <h2>And why should I use it?</h2>
+      <ul>
+        <div class="next">One source of truth</div>
+        <div class="next">API composition layer</div>
+        <div class="next">OpenAPI standards</div>
+        <div class="next">Extensibility</div>
+        <div class="next">Modern technologies</div>
+      </ul>
+      <style>
+        #why ul > li::before {
+          content: "";
+        }
+      </style>
+    </section>
+
+    <section class="slide" id="key-concepts">
+      <h2>Nice, tell me more about concepts</h2>
+      <div class="columns three next">
+        <ul>
+          <li>Application</li>
+          <li>Server</li>
+          <li>Context</li>
+          <li>Binding</li>
+          <li>Dependency Injection</li>
+        </ul>
+        <ul>
+          <li>
+            <del class="underline">Controller<span class="next"></span></del>
+          </li>
+          <li>Interceptors</li>
+          <li>Route</li>
+          <li>Sequence</li>
+          <li>
+            <del class="underline">Model<span class="next"></span></del>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <del class="underline">Data Sources<span class="next"></span></del>
+          </li>
+          <li>
+            <del class="underline">Repository<span class="next"></span></del>
+          </li>
+          <li>Relation</li>
+          <li>Decorator</li>
+          <li>Component</li>
+        </ul>
+      </div>
+
+      <style>
+        #key-concepts .columns {
+          grid-column-gap: 60px;
+        }
+        #key-concepts ul > li::before {
+          content: "";
+        }
+        #key-concepts .underline {
+          position: relative;
+          text-decoration: none;
+        }
+        #key-concepts .underline span {
+          position: absolute;
+          top: 1em;
+          left: 0em;
+          right: 0em;
+          height: 0.12em;
+          background: #cc0000;
+          content: "";
+        }
+      </style>
     </section>
 
     <section class="slide">
-        <h2>Serious citations</h2>
-        <figure>
-            <blockquote>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-            </blockquote>
-            <figcaption>Marcus Tullius Cicero</figcaption>
-        </figure>
+      <h2>Controllers?</h2>
+      <p class="next">
+        A class that implements operations defined by an application’s API
+      </p>
+      <p class="next">Implements an applications business logic</p>
+      <p class="next">
+        Acts as bridge between the HTTP/REST API and domain/database models
+      </p>
     </section>
 
     <section class="slide">
-        <h2>Code samples</h2>
-        <pre>
-            <code>&lt;!DOCTYPE html&gt;</code>
-            <code class="mark">&lt;html lang="en"&gt;</code>
-            <code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-            <code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-            <code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-            <code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-            <code><mark>&lt;/head&gt;</mark></code>
-        </pre>
+      <h2>Model?</h2>
+      <p class="next">Describes business domain objects</p>
+      <p class="next">
+        Usually defines a list of properties with name, type, and other
+        constraints
+      </p>
+      <p class="next">
+        Can be used for data exchange on the wire or between different systems
+      </p>
     </section>
 
     <section class="slide">
-        <h2>Even tables</h2>
-        <table>
-        <tr>
-            <th scope="col">Locavore</th>
-            <th>Umami</th>
-            <th>Helvetica</th>
-            <th>Vegan</th>
-        </tr>
-        <tr>
-            <th scope="row">Fingerstache</th>
-            <td>Kale</td>
-            <td>Chips</td>
-            <td>Keytar</td>
-        </tr>
-        <tr>
-            <th scope="row">Sriracha</th>
-            <td>Gluten-free</td>
-            <td>Ennui</td>
-            <td>Keffiyeh</td>
-        </tr>
-        <tr>
-            <th scope="row">Thundercats</th>
-            <td>Jean</td>
-            <td>Shorts</td>
-            <td>Biodiesel</td>
-        </tr>
-        <tr>
-            <th scope="row">Terry</th>
-            <td>Richardson</td>
-            <td>Swag</td>
-            <td>Blog</td>
-        </tr>
-        </table>
-        <p>It’s good to have information organized.</p>
+      <h2>Data Sources?</h2>
+      <p class="next">
+        A config for a Connector instance that represents data in an external
+        system
+      </p>
+      <p class="next">LoopBack supports many different external system, e.g.</p>
+      <p class="next">
+        In-memory DB, Microsoft SQL, Oracle, Redis, MongoDB, PostgreSQL, ...
+      </p>
     </section>
 
-    <section class="slide" id="picture">
-        <h2>Pictures</h2>
-        <figure>
-            <img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
+    <section class="slide">
+      <h2>Repositories?</h2>
+      <p class="next">
+        Represents a specialized service interface that provides strong-typed
+        data access (for example, CRUD) operations of a domain model against the
+        underlying database or service.
+      </p>
+    </section>
+
+    <section class="slide">
+      <h2>Easy, how can I use it?</h2>
+      <div class="next">
+        <h3 class="crafting">Bottom-up</h3>
+        <em>Programmatic, code-first approach, export an OAS</em>
+      </div>
+      <div class="next">
+        <h3 class="crafting">Top-Down</h3>
+        <em>Use the CLI, scaffold application and generate artifacts</em>
+      </div>
+
+      <style>
+        h3.crafting {
+          margin-bottom: 0.1em;
+        }
+      </style>
+    </section>
+
+    <section class="slide" id="cli">
+      <h2>CLI? Like the Angular CLI?</h2>
+      <ul>
+        <li class="next">Provides CLI tools to help get started quickly</li>
+        <li class="next">
+          Generates applications and installs their dependencies
+        </li>
+        <li class="next">
+          Provides optional installation of recommended dependencies
+        </li>
+        <li class="next">
+          Helps generating artifacts (Controller, DataSource, Model, Repository,
+          [...])
+        </li>
+      </ul>
+      <style>
+        #cli ul > li::before {
+          content: "";
+        }
+      </style>
+    </section>
+    <section class="slide" id="getting-started">
+      <h2>Wow, how can I start developing?</h2>
+      <ol>
+        <li class="next">
+          Install LoopBack 4 CLI
+          <pre>
+                    <code>$ npm i -g @loopback/cli</code>
+                </pre>
+        </li>
+
+        <li class="next">
+          Create a new LoopBack application
+          <pre>
+                    <code>$ lb4 app my-app [--yes]</code>
+                </pre>
+        </li>
+
+        <li class="next">
+          Starting the project
+          <pre>
+                    <code>$ cd my-app && npm start</code>
+                </pre>
+        </li>
+      </ol>
+      <span class="next thatsall">That's all.<br />(almost...)</span>
+      <style>
+        #getting-started .thatsall {
+          position: absolute;
+          top: 2em;
+          left: 7em;
+          right: 0em;
+          height: 0.12em;
+          color: #cc0000;
+          content: "";
+          transform: rotate(-16deg);
+          font-size: 3em;
+        }
+      </style>
+    </section>
+
+    <section class="slide" id="demo">
+      <h2 class="shout">Demo</h2>
+      <style>
+        #demo h2 {
+          font-size: 80px;
+        }
+      </style>
+    </section>
+
+    <section class="slide" id="qa">
+      <h2 class="shout">Q &amp; A</h2>
+      <style>
+        #qa h2 {
+          font-size: 80px;
+        }
+      </style>
+    </section>
+
+    <section class="slide" id="ty">
+      <h2 class="shout">Thank you.</h2>
+      <style>
+        #ty h2 {
+          font-size: 80px;
+        }
+      </style>
+    </section>
+
+    <section class="slide" id="links">
+        <h2>Useful links</h2>
+        <ul>
+            <li><a href="https://loopback.io">LoopBack.io</a></li>
+            <li><a href="https://loopback.io/doc/en/lb4/index.html">LoopBack4 docs</a></li>
+            <li><a href="https://github.com/strongloop/loopback-next">LoopBack on GitHub</a></li>
+            <li><a href="https://loopback.io/doc/en/lb4/Concepts.html">Key concepts</a></li>
+            <li><a href="https://loopback.io/doc/en/lb4/Defining-the-API-using-code-first-approach.html">Bottom up approach - Code first</a></li>
+            <li><a href="https://loopback.io/doc/en/lb4/Defining-the-API-using-design-first-approach.html">Top-down approach - Design first</a></li>
+            <li><a href="https://github.com/strongloop/loopback4-example-shopping">Comprehensive E-Commerce platform example</a></li>
+        </ul>
+
         <style>
-            #picture h2 {
-                color: white;
-            }
+        #links ul > li::before {
+          content: "";
+        }
         </style>
     </section>
-
-    <section class="slide">
-        <h2 class="shout shrink">You can even shout this way</h2>
-    </section>
-
-    <section class="slide">
-        <h2>Inner navigation</h2>
-        <ol>
-            <li>Lets you reveal list items one by one</li>
-            <li class="next">To keep some key points</li>
-            <li class="next">In secret from audience</li>
-            <li class="next">But it will work only once</li>
-            <li class="next">Nobody wants to see the same joke twice</li>
-        </ol>
-    </section>
-
-    <section class="slide" id="see-more">
-        <h2 class="shout">
-            <img src="pictures/logo.svg" alt="Shower logo">
-            <a href="https://github.com/shower/shower">See more on GitHub</a>
-        </h2>
-        <style>
-            #see-more h2 {
-                font-size: 100px
-            }
-
-            #see-more img {
-                width: 0.72em;
-                height: 0.72em;
-            }
-        </style>
-    </section>
-
-    <footer class="badge">
-        <a href="https://github.com/shower/shower">Fork me on GitHub</a>
-    </footer>
 
     <div class="progress"></div>
 
     <script src="node_modules/shower-core/shower.min.js"></script>
-    <!-- Copyright © 3000 Yours Truly, Famous Inc. -->
-
-</body>
+  </body>
 </html>
