Add Angular application to todo-example

--- a/workspace/loopback4-example-todo/public/index.html
+++ b/workspace/loopback4-example-todo/public/index.html
@@ -60,6 +60,7 @@
 
     <h3>OpenAPI spec: <a href="/openapi.json">/openapi.json</a></h3>
     <h3>API Explorer: <a href="/explorer">/explorer</a></h3>
+    <h3>Angular App: <a href="/dist/app">/dist/app</a></h3>
   </div>
 
   <footer class="power">
@@ -70,4 +71,3 @@
 </body>
 
 </html>
-
